working on looping through google's API

--- a/html/index.html
+++ b/html/index.html
@@ -146,149 +146,149 @@
             <div class="row">
               <!-- card 1 -->
               <div class="col-lg-2 col-lg-offset-1 col-sm-6">
-              <div class="flight-card">
-                <div class="ui link cards">
-                  <div class="card">
-                    <div class="image">
-                      Best Flight
-                    </div>
-                    <div class="content">
-                      <div class="description">
-                        SNA to SFO
+                <div class="flight-card">
+                  <div class="ui link cards">
+                    <div class="card">
+                      <div class="image">
+                        Best Flight
                       </div>
-                      <div class="header">United</div>
-                      <div class="description price">
-                        <h1>$145</h1>
+                      <div class="content">
+                        <div class="description air-to-air">
+                          SNA to SFO
+                        </div>
+                        <div class="header air-carrier">United</div>
+                        <div class="description price">
+                          <h1>$145</h1>
+                        </div>
+                        <div class="description">
+                          <div class="air-time">7:50 am - 9:25 am</div>
+                          <div class="air-duration">1 h 35 min</div>
+                          <div class="air-stop">Nonstop</div>
+                        </div>
                       </div>
-                      <div class="description info">
-                        <div class="time">7:50 am - 9:25 am</div>
-                        <div class="duration">1 h 35 min</div>
-                        <div class="stop">Nonstop</div>
+                      <div class="extra content">
+                        <button type="submit" class="btn btn-default book-button">Book</button>
                       </div>
-                    </div>
-                    <div class="extra content">
-                      <button type="submit" class="btn btn-default book-button">Book</button>
                     </div>
                   </div>
                 </div>
-              </div>
               </div>
               <!-- card 2 -->
               <div class="col-lg-2 col-sm-6">
-              <div class="flight-card">
-                <div class="ui link cards">
-                  <div class="card">
-                    <div class="image">
-                      Best Flight
-                    </div>
-                    <div class="content">
-                      <div class="description">
-                        SNA to SFO
+                <div class="flight-card">
+                  <div class="ui link cards">
+                    <div class="card">
+                      <div class="image">
+                        Best Flight
                       </div>
-                      <div class="header">United</div>
-                      <div class="description price">
-                        <h1>$145</h1>
+                      <div class="content">
+                        <div class="description air-to-air">
+                          SNA to SFO
+                        </div>
+                        <div class="header air-carrier">United</div>
+                        <div class="description price">
+                          <h1>$145</h1>
+                        </div>
+                        <div class="description">
+                          <div class="air-time">7:50 am - 9:25 am</div>
+                          <div class="air-duration">1 h 35 min</div>
+                          <div class="air-stop">Nonstop</div>
+                        </div>
                       </div>
-                      <div class="description">
-                        <div class="time">7:50 am - 9:25 am</div>
-                        <div class="duration">1 h 35 min</div>
-                        <div class="stop">Nonstop</div>
+                      <div class="extra content">
+                        <button type="submit" class="btn btn-default book-button">Book</button>
                       </div>
-                    </div>
-                    <div class="extra content">
-                      <button type="submit" class="btn btn-default book-button">Book</button>
                     </div>
                   </div>
                 </div>
-              </div>
               </div>
               <!-- card 3 -->
               <div class="col-lg-2 col-sm-6">
-              <div class="flight-card">
-                <div class="ui link cards">
-                  <div class="card">
-                    <div class="image">
-                      Best Flight
-                    </div>
-                    <div class="content">
-                      <div class="description">
-                        SNA to SFO
+                <div class="flight-card">
+                  <div class="ui link cards">
+                    <div class="card">
+                      <div class="image">
+                        Best Flight
                       </div>
-                      <div class="header">United</div>
-                      <div class="description price">
-                        <h1>$145</h1>
+                      <div class="content">
+                        <div class="description air-to-air">
+                          SNA to SFO
+                        </div>
+                        <div class="header air-carrier">United</div>
+                        <div class="description price">
+                          <h1>$145</h1>
+                        </div>
+                        <div class="description">
+                          <div class="air-time">7:50 am - 9:25 am</div>
+                          <div class="air-duration">1 h 35 min</div>
+                          <div class="air-stop">Nonstop</div>
+                        </div>
                       </div>
-                      <div class="description">
-                        <div class="time">7:50 am - 9:25 am</div>
-                        <div class="duration">1 h 35 min</div>
-                        <div class="stop">Nonstop</div>
+                      <div class="extra content">
+                        <button type="submit" class="btn btn-default book-button">Book</button>
                       </div>
-                    </div>
-                    <div class="extra content">
-                      <button type="submit" class="btn btn-default book-button">Book</button>
                     </div>
                   </div>
                 </div>
-              </div>
               </div>
               <!-- card 4 -->
               <div class="col-lg-2 col-sm-6">
-              <div class="flight-card">
-                <div class="ui link cards">
-                  <div class="card">
-                    <div class="image">
+                <div class="flight-card">
+                  <div class="ui link cards">
+                    <div class="card">
+                      <div class="image">
 
-                    </div>
-                    <div class="content">
-                      <div class="description">
-                        SNA to SFO
                       </div>
-                      <div class="header">United</div>
-                      <div class="description price">
-                        <h1>$145</h1>
+                      <div class="content">
+                        <div class="description air-to-air">
+                          SNA to SFO
+                        </div>
+                        <div class="header air-carrier">United</div>
+                        <div class="description price">
+                          <h1>$145</h1>
+                        </div>
+                        <div class="description">
+                          <div class="air-time">7:50 am - 9:25 am</div>
+                          <div class="air-duration">1 h 35 min</div>
+                          <div class="air-stop">Nonstop</div>
+                        </div>
                       </div>
-                      <div class="description">
-                        <div class="time">7:50 am - 9:25 am</div>
-                        <div class="duration">1 h 35 min</div>
-                        <div class="stop">Nonstop</div>
+                      <div class="extra content">
+                        <button type="submit" class="btn btn-default book-button">Book</button>
                       </div>
-                    </div>
-                    <div class="extra content">
-                      <button type="submit" class="btn btn-default book-button">Book</button>
                     </div>
                   </div>
                 </div>
               </div>
-              </div>
-               <!-- card 5 -->
+              <!-- card 5 -->
               <div class="col-lg-2 col-sm-6">
-              <div class="flight-card">
-                <div class="ui link cards">
-                  <div class="card">
-                    <div class="image">
+                <div class="flight-card">
+                  <div class="ui link cards">
+                    <div class="card">
+                      <div class="image">
 
-                    </div>
-                    <div class="content">
-                      <div class="description">
-                        SNA to SFO
                       </div>
-                      <div class="header">United</div>
-                      <div class="description price">
-                        <h1>$145</h1>
+                      <div class="content">
+                        <div class="description air-to-air">
+                          SNA to SFO
+                        </div>
+                        <div class="header air-carrier">United</div>
+                        <div class="description price">
+                          <h1>$145</h1>
+                        </div>
+                        <div class="description">
+                          <div class="air-time">7:50 am - 9:25 am</div>
+                          <div class="air-duration">1 h 35 min</div>
+                          <div class="air-stop">Nonstop</div>
+                        </div>
                       </div>
-                      <div class="description">
-                        <div class="time">7:50 am - 9:25 am</div>
-                        <div class="duration">1 h 35 min</div>
-                        <div class="stop">Nonstop</div>
+                      <div class="extra content">
+                        <button type="submit" class="btn btn-default book-button">Book</button>
                       </div>
-                    </div>
-                    <div class="extra content">
-                      <button type="submit" class="btn btn-default book-button">Book</button>
                     </div>
                   </div>
-                </div>
-              </div>
-              </div> <!-- card 5 end -->
+                </div> <!-- card 5 end -->
+              </div> <!-- column end -->
             </div> <!-- row end -->
           </div> <!-- container end -->
         </div> <!-- flight cards end -->
@@ -370,8 +370,7 @@
           </a>
         </div>
       </div>
-      <div id="content"></div>
-        <div id="map"></div>
+      <div id="map"></div>
       <div class="footer">
         <div class="footer-logo">
           <img src="plane-logo.png" class="plane-logo">
