pushing most recent code

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
     <link rel="stylesheet" href="default.css">
     <link rel="stylesheet" href="semantic.css">
-    <link rel="stylesheet" href="animate.css">
+    <!--<link rel="stylesheet" href="animate.css">-->
   </head>
   <body>
     <center>
@@ -100,7 +100,7 @@
                 <label for="flyingFrom">Flying From</label>
                 <div class="input-group">
                   <div class="input-group-addon"><div class="glyphicon glyphicon-map-marker"></div></div>
-                  <input type="email" class="form-control" id="flyingFrom" placeholder="Airport">
+                  <input type="text" class="form-control" id="flyingFrom" placeholder="Airport">
                 </div>
                 </div>
               </div>
@@ -109,7 +109,7 @@
                 <label for="flyingTo">Flying To</label>
                 <div class="input-group">
                   <div class="input-group-addon"><div class="glyphicon glyphicon-map-marker"></div></div>
-                  <input type="email" class="form-control" id="flyingTo" placeholder="Airport">
+                  <input type="text" class="form-control" id="flyingTo" placeholder="Airport">
                 </div>
                 </div>
               </div>
@@ -118,7 +118,7 @@
                 <label for="departing">Departing</label>
                 <div class="input-group">
                   <div class="input-group-addon"><div class="glyphicon glyphicon-calendar"></div></div>
-                  <input type="email" class="form-control" id="departing" placeholder="YYYY-MM-DD">
+                  <input type="text" class="form-control" id="departing" placeholder="YYYY-MM-DD">
                 </div>
                 </div>
               </div>
@@ -127,7 +127,7 @@
                 <label for="returning">Returning</label>
                 <div class="input-group">
                   <div class="input-group-addon"><div class="glyphicon glyphicon-calendar"></div></div>
-                  <input type="email" class="form-control" id="returning" placeholder="YYYY-MM-DD">
+                  <input type="text" class="form-control" id="returning" placeholder="YYYY-MM-DD">
                 </div>
                 </div>
               </div>
