#2 All data loops through all 5 cards, finished issue #2. Organized files

--- a/html/index.html
+++ b/html/index.html
@@ -51,8 +51,8 @@
             <div class="row">
               <div class="col-sm-6 col-sm-3">
                 <select class="form-control" id="flightWay">
-                  <option value="round-trip">Round Trip</option>
                   <option value="one-way">One Way</option>
+                  <option value="round-trip">Round Trip</option>
                   <option value="multi-city">Multi-City</option>
                 </select>
               </div>
@@ -148,21 +148,15 @@
                 <div class="flight-card">
                   <div class="ui link cards">
                     <div class="card">
-                      <div class="image">
-                        Best Flight
-                      </div>
+                      <div class="image"></div>
                       <div class="content">
-                        <div class="description air-to-air">
-                          SNA to SFO
-                        </div>
-                        <div class="header air-carrier">United</div>
-                        <div class="description price">
-                          <h1>$145</h1>
-                        </div>
+                        <div class="description air-to-air"></div>
+                        <div class="header air-carrier"></div>
+                        <div class="price"></div>
                         <div class="description">
-                          <div class="air-time">7:50 am - 9:25 am</div>
-                          <div class="air-duration">1 h 35 min</div>
-                          <div class="air-stop">Nonstop</div>
+                          <span class="air-dep"></span> - <span class="air-ari"></span>
+                          <div class="air-duration"></div><br/>
+                          <div class="air-available"></div>
                         </div>
                       </div>
                       <div class="extra content">
@@ -177,21 +171,15 @@
                 <div class="flight-card">
                   <div class="ui link cards">
                     <div class="card">
-                      <div class="image">
-                        Best Flight
-                      </div>
+                      <div class="image"></div>
                       <div class="content">
-                        <div class="description air-to-air">
-                          SNA to SFO
-                        </div>
-                        <div class="header air-carrier">United</div>
-                        <div class="description price">
-                          <h1>$145</h1>
-                        </div>
+                        <div class="description air-to-air"></div>
+                        <div class="header air-carrier"></div>
+                        <div class="price"></div>
                         <div class="description">
-                          <div class="air-time">7:50 am - 9:25 am</div>
-                          <div class="air-duration">1 h 35 min</div>
-                          <div class="air-stop">Nonstop</div>
+                          <span class="air-dep"></span> - <span class="air-ari"></span>
+                          <div class="air-duration"></div><br/>
+                          <div class="air-available"></div>
                         </div>
                       </div>
                       <div class="extra content">
@@ -206,21 +194,15 @@
                 <div class="flight-card">
                   <div class="ui link cards">
                     <div class="card">
-                      <div class="image">
-                        Best Flight
-                      </div>
+                      <div class="image"></div>
                       <div class="content">
-                        <div class="description air-to-air">
-                          SNA to SFO
-                        </div>
-                        <div class="header air-carrier">United</div>
-                        <div class="description price">
-                          <h1>$145</h1>
-                        </div>
+                        <div class="description air-to-air"></div>
+                        <div class="header air-carrier"></div>
+                        <div class="price"></div>
                         <div class="description">
-                          <div class="air-time">7:50 am - 9:25 am</div>
-                          <div class="air-duration">1 h 35 min</div>
-                          <div class="air-stop">Nonstop</div>
+                          <span class="air-dep"></span> - <span class="air-ari"></span>
+                          <div class="air-duration"></div><br/>
+                          <div class="air-available"></div>
                         </div>
                       </div>
                       <div class="extra content">
@@ -235,21 +217,15 @@
                 <div class="flight-card">
                   <div class="ui link cards">
                     <div class="card">
-                      <div class="image">
-
-                      </div>
+                      <div class="image"></div>
                       <div class="content">
-                        <div class="description air-to-air">
-                          SNA to SFO
-                        </div>
-                        <div class="header air-carrier">United</div>
-                        <div class="description price">
-                          <h1>$145</h1>
-                        </div>
+                        <div class="description air-to-air"></div>
+                        <div class="header air-carrier"></div>
+                        <div class="price"></div>
                         <div class="description">
-                          <div class="air-time">7:50 am - 9:25 am</div>
-                          <div class="air-duration">1 h 35 min</div>
-                          <div class="air-stop">Nonstop</div>
+                          <span class="air-dep"></span> - <span class="air-ari"></span>
+                          <div class="air-duration"></div><br/>
+                          <div class="air-available"></div>
                         </div>
                       </div>
                       <div class="extra content">
@@ -264,21 +240,15 @@
                 <div class="flight-card">
                   <div class="ui link cards">
                     <div class="card">
-                      <div class="image">
-
-                      </div>
+                      <div class="image"></div>
                       <div class="content">
-                        <div class="description air-to-air">
-                          SNA to SFO
-                        </div>
-                        <div class="header air-carrier">United</div>
-                        <div class="description price">
-                          <h1>$145</h1>
-                        </div>
+                        <div class="description air-to-air"></div>
+                        <div class="header air-carrier"></div>
+                        <div class="price"></div>
                         <div class="description">
-                          <div class="air-time">7:50 am - 9:25 am</div>
-                          <div class="air-duration">1 h 35 min</div>
-                          <div class="air-stop">Nonstop</div>
+                          <span class="air-dep"></span> - <span class="air-ari"></span>
+                          <div class="air-duration"></div><br/>
+                          <div class="air-available"></div>
                         </div>
                       </div>
                       <div class="extra content">
