#5 added 1 more exotic location and fixed minor stylizations.

--- a/html/index.html
+++ b/html/index.html
@@ -347,19 +347,21 @@
             </div>
           </div>
           <div class="col-md-12">
-            <h4>Discover the Top 5 Most Exotic Vacation spots!</h4>
+            <h4>Discover the Top 6 Most Exotic Vacation spots!</h4>
           </div>
         </div>
       </div>
       <div class="container exotic-grid">
         <div class="row">
-          <div class="col-md-7 col-sm-6 exotic-col">
+          <div class="col-md-12 exotic-map">
             <div id="map"></div>
           </div>
-          <div class="col-md-5 col-sm-6 exotic-col exotic-img">
+        </div>
+        <div class="exotic-articles">
+          <div class="col-md-4 col-sm-6 exotic-col exotic-img">
             <div class="col-md-12 exotic-description">
               <div class="exotic-locations">
-                <h3>
+                <h3>1.
                   <span class="exotic-location"></span>
                   <img src="plane-logo.png" class="plane-logo-exotic">
                   <span class="exotic-price"></span>
@@ -379,8 +381,149 @@
               <span class="description">
                 <span class="exotic-number"></span>
               </span>
-              <span class="exotic-button"><button type="button" class="exotic-btn btn btn-default">View Details</button></span>
+              <span class="exotic-button">
+                <button type="button" class="exotic-btn btn btn-default">View Details</button>
+              </span>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 exotic-col exotic-img">
+            <div class="col-md-12 exotic-description">
+              <div class="exotic-locations">
+                <h3>2.
+                  <span class="exotic-location"></span>
+                  <img src="plane-logo.png" class="plane-logo-exotic">
+                  <span class="exotic-price"></span>
+                </h3>
               </div>
+              <div class="exotic-stays-info">
+                <span class="exotic-stay"></span>
+                <span class="booking">Book from
+                  <span class="exotic-booking"></span>
+                </span>
+              </div>
+              <div class="glyphicon glyphicon-map-marker"></div>
+              <span class="description">
+                <span class="exotic-address"></span><br/>
+              </span>
+              <div class="glyphicon glyphicon-earphone"></div>
+              <span class="description">
+                <span class="exotic-number"></span>
+              </span>
+              <span class="exotic-button">
+                <button type="button" class="exotic-btn btn btn-default">View Details</button>
+              </span>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 exotic-col exotic-img">
+            <div class="col-md-12 exotic-description">
+              <div class="exotic-locations">
+                <h3>3.
+                  <span class="exotic-location"></span>
+                  <img src="plane-logo.png" class="plane-logo-exotic">
+                  <span class="exotic-price"></span>
+                </h3>
+              </div>
+              <div class="exotic-stays-info">
+                <span class="exotic-stay"></span>
+                <span class="booking">Book from
+                  <span class="exotic-booking"></span>
+                </span>
+              </div>
+              <div class="glyphicon glyphicon-map-marker"></div>
+              <span class="description">
+                <span class="exotic-address"></span><br/>
+              </span>
+              <div class="glyphicon glyphicon-earphone"></div>
+              <span class="description">
+                <span class="exotic-number"></span>
+              </span>
+              <span class="exotic-button">
+                <button type="button" class="exotic-btn btn btn-default">View Details</button>
+              </span>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 exotic-col exotic-img">
+            <div class="col-md-12 exotic-description">
+              <div class="exotic-locations">
+                <h3>4.
+                  <span class="exotic-location"></span>
+                  <img src="plane-logo.png" class="plane-logo-exotic">
+                  <span class="exotic-price"></span>
+                </h3>
+              </div>
+              <div class="exotic-stays-info">
+                <span class="exotic-stay"></span>
+                <span class="booking">Book from
+                  <span class="exotic-booking"></span>
+                </span>
+              </div>
+              <div class="glyphicon glyphicon-map-marker"></div>
+              <span class="description">
+                <span class="exotic-address"></span><br/>
+              </span>
+              <div class="glyphicon glyphicon-earphone"></div>
+              <span class="description">
+                <span class="exotic-number"></span>
+              </span>
+              <span class="exotic-button">
+                <button type="button" class="exotic-btn btn btn-default">View Details</button>
+              </span>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 exotic-col exotic-img">
+            <div class="col-md-12 exotic-description">
+              <div class="exotic-locations">
+                <h3>5.
+                  <span class="exotic-location"></span>
+                  <img src="plane-logo.png" class="plane-logo-exotic">
+                  <span class="exotic-price"></span>
+                </h3>
+              </div>
+              <div class="exotic-stays-info">
+                <span class="exotic-stay"></span>
+                <span class="booking">Book from
+                  <span class="exotic-booking"></span>
+                </span>
+              </div>
+              <div class="glyphicon glyphicon-map-marker"></div>
+              <span class="description">
+                <span class="exotic-address"></span><br/>
+              </span>
+              <div class="glyphicon glyphicon-earphone"></div>
+              <span class="description">
+                <span class="exotic-number"></span>
+              </span>
+              <span class="exotic-button">
+                <button type="button" class="exotic-btn btn btn-default">View Details</button>
+              </span>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 exotic-col exotic-img">
+            <div class="col-md-12 exotic-description">
+              <div class="exotic-locations">
+                <h3>6.
+                  <span class="exotic-location"></span>
+                  <img src="plane-logo.png" class="plane-logo-exotic">
+                  <span class="exotic-price"></span>
+                </h3>
+              </div>
+              <div class="exotic-stays-info">
+                <span class="exotic-stay"></span>
+                <span class="booking">Book from
+                  <span class="exotic-booking"></span>
+                </span>
+              </div>
+              <div class="glyphicon glyphicon-map-marker"></div>
+              <span class="description">
+                <span class="exotic-address"></span><br/>
+              </span>
+              <div class="glyphicon glyphicon-earphone"></div>
+              <span class="description">
+                <span class="exotic-number"></span>
+              </span>
+              <span class="exotic-button">
+                <button type="button" class="exotic-btn btn btn-default">View Details</button>
+              </span>
             </div>
           </div>
         </div>
